# zeusfi

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  Makefile  compose.dev.yml  compose.yml  pyproject.toml
backend/apps/: __init__.py
backend/apps/agent/: engine.py  executor.py  gas.py  monitor.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/positions/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/wallets/: __init__.py  admin.py  authentication.py  models.py  serializers.py  views.py
backend/apps/yields/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  chains.py  contracts.py  protocols.py
backend/core/: celery.py  custom_middleware.py  drf.py  permissions.py  settings.py  ssh_tunnel.py  storage_backends.py  threads.py  urls.py
backend/integrations/: __init__.py  base.py
backend/integrations/contracts/: __init__.py  abis.py  reader.py
backend/integrations/defillama/: __init__.py  client.py  vault_resolver.py
backend/integrations/ens/: __init__.py  client.py  tasks.py
backend/integrations/lifi/: __init__.py  client.py  executor.py  types.py
backend/parameters/: models.py  urls.py  views.py
backend/parameters/migrations/: 0001_initial.py
backend/parameters/serializers/: log_serializer.py  parameters.py
backend/postman/: ZeusFi_API.postman_collection.json  ZeusFi_API.postman_environment.json
backend/scripts/: sign_siwe.py
backend/tofu/shared/: .terraform.lock.hcl  public.auto.tfvars  variables.tf  (+1 more)
(+101 files in other folders)
